Fixed spacing

--- a/resources/sass/modules/_lists.scss
+++ b/resources/sass/modules/_lists.scss
@@ -25,7 +25,7 @@ main li:last-of-type {
 }
 
 .steps {
-    display: flex;
+    margin: 0;
     padding: 0;
 }
 
@@ -36,7 +36,6 @@ main li:last-of-type {
 }
 
 .steps li {
-    flex: 1 0 0;
     text-align: center;
 }
 
